--- a/src/assets/style/common/common.css
+++ b/src/assets/style/common/common.css
@@ -9,3 +9,16 @@ a:hover {
 i {
     font-style: normal;
 }
+ 
+.clearfix {
+    zoom: 1;
+}
+
+.clearfix:after {
+    content: ".";    
+    display: block; 
+    clear: both;    
+    visibility: hidden;      
+    height: 0;     
+    font-size:0;
+} 
