--- a/src/styles/mixins.css
+++ b/src/styles/mixins.css
@@ -5,6 +5,7 @@
 /* padding-top 自适应布局 */
 /* pic-link 图片蒙版布局 */
 /* c-rt 右上角标志 */
+/* c-lt 左上标志 */
 /* c-lb 左下角标志 */
 /* pic-title */
 /* banner c-lb 样式模块 */
