--- a/src/assets/style/common/common.scss
+++ b/src/assets/style/common/common.scss
@@ -24,4 +24,8 @@ i {
     visibility: hidden;      
     height: 0;     
     font-size: 0;
-} 
+}
+.base-swiper-timeline,
+.base-person-swiper {
+    overflow: hidden;
+}
