1.电影详情页初步完成 2.片花资讯模块需单独做(不能去公共模板)
Signed-off-by: Amo <xiaomozyw@sina.com>

--- a/src/assets/style/common/common.scss
+++ b/src/assets/style/common/common.scss
@@ -6,6 +6,12 @@ body {
     text-overflow: ellipsis;
     white-space: nowrap;
 }
+.text-ellipsis-2 {
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    overflow: hidden;
+}
 a:hover {
     text-decoration: none;
 }
