--- a/src/assets/style/common/common.css
+++ b/src/assets/style/common/common.css
@@ -8,6 +8,13 @@ body {
   white-space: nowrap;
 }
 
+.text-ellipsis-2 {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  overflow: hidden;
+}
+
 a:hover {
   text-decoration: none;
 }
