--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -209,6 +209,9 @@
     &.56com  {
         background-position: 0 -.026667rem;
     }
+    &.bilibili  {
+        background-position: 0 -18.146667rem;
+    }
 }
 
 
